# quickfix.py

./: .gitignore  .travis.yml  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  quickfix.py  setup.cfg  setup.py  tox.ini  vimrc
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: bashrc  vimrc
src/quickfix_py/: __init__.py  cli.py
tests/: __init__.py  test_quickfix_py.py
