[metadata]
author = Tony Beta Lambda
author_email = tonybetalambda@gmail.com
name = quickfix_py
keywords = quickfix_py
description= Run a Python script and format the exception traceback as Vim quickfix
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
license = MIT license
license_file = LICENSE
classifiers =
        Development Status :: 2 - Pre-Alpha
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Natural Language :: English
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
url = https://github.com/tonyxty/quickfix.py
include_package_data = True
zip_safe = False

[options]
python_requires = >= 3.6
package_dir=
    =src
packages=find:
setup_requires =
    setuptools>=39.2.0
    setuptools_scm

test_requires =

install_requires =

[options.packages.find]
where=src

[options.extras_require]
docs =
    sphinx==2.0.1
    recommonmark>=0.5.0
    sphinx_rtd_theme==0.4.3
    numpydoc

dev =
    %(docs)s
    bumpversion==0.5.3
    watchdog==0.9.0
    flake8==3.7.7
    tox==3.5.2
    coverage==4.5.1
    twine==1.13.0
    readme-renderer[md]==24.0

[options.entry_points]
console_scripts =
    quickfix.py = quickfix_py.cli:main

[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/quickfix_py/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here

